k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: python-backend
  labels:
    app: python-backend


spec:
  replicas: 2
  strategy: 
    type: Recreate
    
  selector:
    matchLabels:
      app: python-backend
  template:
    metadata:
      labels:   
        app: python-backend


    spec:
      containers:
      - name: python-backend-container
        image: kkkate123/python-backend:1.0.6
        imagePullPolicy: Always

        ports:
        - containerPort: 8080

        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"

        livenessProbe:
          httpGet:  
           path: /
           port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3

        readinessProbe:
          httpGet:
           path: /
           port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 3
