k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: python-backend-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: app.danit.pls-accept.pp.ua
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx

  rules:
  - host: app.danit.pls-accept.pp.ua

    http:
      paths: 
      - path: /
      - pathType: Prefix
        
        backend:
          service:
            name: python-backend-service
            port:
              number: 80
